# backend/src/main/java/com/bukovina/platform/accommodation/guesthouse/dto/RoomTypeResponse.java
@@ -6,6 +6,8 @@ import java.util.UUID;
 public record RoomTypeResponse(
     UUID id,
     String name,
+    String shortDescription,
+    String detailedDescription,
     int quantity,
     int standardOccupancy,
     int roomsWithExtraBed,
